--- a/style.css
+++ b/style.css
@@ -476,19 +476,44 @@ color:#222;
     transition: background-color 0.1s ease-in-out; 
     Opacity:0.8;
 }
-.location {
-    display: flex;
-    flex-direction: column; /* Stack items vertically */
-    justify-content: center; /* Center vertically */
-    align-items: center; /* Center horizontally */
-    height: 100%; /* Full height of the container */
-    text-align: center; /* Center text */
-    background-color: #f0f0f0; /* Light background for contrast */
+.location{
+    width: 60%;
+    margin:auto;
+    padding: 80px 0;
 }
-
-.center-iframe {
-    width: 80%; /* Set the width of the iframe */
-    height: 60%; /* Set the height of the iframe */
-    border: none; /* Remove default border */
-    margin-top: 200px; /* Increase margin to push the iframe down further */
+.iframe-container {
+    margin-top: 20px; /* Adjust this value as needed */
+}
+.contact-us{
+    width: 80%;
+    margin: auto;
+}
+.contact-col{
+    flex-basis:48%;
+    margin-bottom:30px;
+}
+.contact-col div{
+    display:flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.contact-col div .fas{
+    font-size:28px;
+    color:#f44336;
+    margin:10px;
+    margin-right: 30px;
+}
+.contact-col div h5{
+    font-size:20px;
+    margin-bottom: 5px;
+    color:#555;
+    font-weight:400;
+}
+.contact-col input,.contact-col textarea{
+    width:100%;
+    padding:15px;
+    margin-bottom: 17px;
+    outline:none;
+    border:1px solid #ccc;
+    box-sizing: border-box;
 }
