--- a/style.css
+++ b/style.css
@@ -484,11 +484,12 @@ color:#222;
 .location-col {
     position: bottom;
   bottom: 20px; 
-  margin-top: 20px;
+  margin-top: 250px;
 }
 .contact-us{
     width: 80%;
     margin: auto;
+Position:sticky
 }
 .contact-col{
     flex-basis:48%;
@@ -519,3 +520,52 @@ color:#222;
     border:1px solid #ccc;
     box-sizing: border-box;
 }
+.courses h1{
+    color: #ccc;
+}
+.staffs{
+    width:80%;
+    margin:auto;
+    text-align: center;
+    padding-top:50px;
+    }
+    .staffs-col{
+        flex-basis:32%;
+        border-radius: 10px;
+        margin-bottom:30px;
+        position:relative;
+        overflow:hidden;
+    }
+    .staffs-col img{
+        width:100%;
+        display:block;
+    }
+    .layer{
+        background:transparent;
+        height:100%;
+        width:100%;
+        position:absolute;
+        top:0%;
+        left:0%;
+        transition: 0.5s;
+    }
+    .layer:hover{
+        background:rgba(226,0,0,0.7);
+    }
+    .layer h3{
+        width:100%;
+        font-weight: 500;
+        color:#fff;
+        font-size: 26px;
+        bottom:0;
+        left:50%;
+        transform: translateX(-50%);
+        position:absolute;
+        opacity:0;
+        transition:0.5s;
+    }
+    .layer:hover h3{
+        bottom: 49%;
+        opacity: 1;
+    
+    }
