--- a/style.css
+++ b/style.css
@@ -476,16 +476,7 @@ color:#222;
     transition: background-color 0.1s ease-in-out; 
     Opacity:0.8;
 }
-.location{
-    width: 60%;
-    margin:auto;
-    padding: 80px 0;
-}
-.location-col {
-    position: bottom;
-  bottom: 20px; 
-  margin-top: 250px;
-}
+
 .contact-us{
     width: 80%;
     margin: auto;
@@ -568,4 +559,25 @@ Position:sticky
         bottom: 49%;
         opacity: 1;
     
+    }
+    .location {
+        width: 100%; 
+        display: flex; 
+        justify-content: center; 
+    }
+    
+    .location-col {
+        width: 100%; 
+        display: flex;
+        justify-content: center; 
+        margin-bottom: 100px;
+    }
+    
+    .location-col iframe {
+        width: 100%; 
+        height: 450px; 
+    }
+    .scrolled-text {
+        color: black !important; 
+        transition: color 0.3s ease-in-out;
     }
